--- a/action-feed-chart/values.yaml
+++ b/action-feed-chart/values.yaml
@@ -15,9 +15,19 @@ services:
     buildId: 1
   uiService:
     buildId: 1
-values
-values
-values
-values
-values
+kkka fsdf f afs
+ asdf
+ 
+asdf
+ as
+df 
+as
+fdas
+df
+as
+df 
+asdf
+as
+d f
+s
 values
