--- a/readme.yaml
+++ b/readme.yaml
@@ -1,6 +1,1 @@
-habc: dddd sadfasf
-  dssfa {{xsaasd fsa fasfasf asdf asdf sadf safsaf
- asdfasdf
-  {{{{ adsfasdfasf
- asdf asdfasdf
- asdf asdfa
+habc: dddd sadasdfasdf
