--- a/nginx.yaml
+++ b/nginx.yaml
@@ -372,7 +372,7 @@ spec:
     spec:
       containers:
         - name: nginx-ingress-default-backend
-          image: "k8s.gcr.io/defaultbackend-amd64:1.5"
+          image: "hooli.com/defaultbackend-amd64:1.5"
           imagePullPolicy: "IfNotPresent"
           args:
           securityContext:
